--- a/templates/boards/show.html
+++ b/templates/boards/show.html
@@ -1,48 +1,143 @@
-<div class="page-header">
-  <h1>Board#Show</h1>
+<div class="d-flex justify-content-between border-wrapper">
+  <div class="board-values">
+    <div class="report-header">
+      <div class="report-title d-flex justify-content-between align-items-center flex-md-row flex-sm-column flex-xs-column flex-column">
+        <h3 class="mb-2"><%= board.Name %></h3>
+
+        <div class="board-action-buttons action-buttons d-flex justify-content-between align-items-center">
+          <a href="<%= editBoardPath({ board_id: board.ID }) %>" class="button-with-tooltip btn btn-info btn-sm d-flex justify-content-center align-items-center">Editar tablero</a>
+          <a href="<%= boardPath({ board_id: board.ID }) %>" data-method="DELETE" data-confirm="Are you sure?" class="button-with-tooltip btn btn-danger btn-sm d-flex justify-content-center align-items-center">Eliminar tablero</a>
+        </div>
+      </div>
+
+      <div class="d-flex justify-content-between align-items-center">
+        <div class="action-buttons d-flex justify-content-around align-self-end">
+          <span href="#" class="button-with-tooltip btn btn-success btn-sm d-flex justify-content-center align-items-center" data-toggle="modal" data-target="#new-entrance">
+            Nuevo Ingreso
+          </span>
+
+          <span href="#" class="button-with-tooltip btn btn-danger btn-sm  d-flex justify-content-center align-items-center" data-toggle="modal" data-target="#new-exit">
+            Nuevo Egreso
+          </span>
+        </div>
+
+        <div class="total-exits">
+          <ul class="d-flex justify-content-between align-items-center">
+            <li class="d-flex flex-column align-items-center">
+              <span>
+                Total Ingresos
+                <i class="fa fa-info-circle button-with-tooltip" aria-hidden="true">
+                  <b class="btn-tooltip">Ingresos en este tablero</b>
+                </i>
+              </span>
+              <span>$100.000</span>
+            </li>
+            <li class="d-flex flex-column align-items-center">
+              <span>
+                Total egresos
+                <i class="fa fa-info-circle button-with-tooltip" aria-hidden="true">
+                  <b class="btn-tooltip">Egresos en este tablero</b>
+                </i>
+              </span>
+              <span>$100.000</span>
+            </li>
+
+            <li class="d-flex flex-column align-items-center">
+              <span>
+                Saldo sin pagos
+                <i class="fa fa-info-circle button-with-tooltip" aria-hidden="true">
+                  <b class="btn-tooltip">Dinero en el bolsillo</b>
+                </i>
+              </span>
+              <span>$100.000</span>
+            </li>
+            <li class="d-flex flex-column align-items-center">
+              <span>
+                Saldo libre
+                <i class="fa fa-info-circle button-with-tooltip" aria-hidden="true">
+                  <b class="btn-tooltip">Luego de pagar todo</b>
+                </i>
+              </span>
+              <span>$100.000</span>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="report-table-wrapper">
+      <table>
+        <thead>
+          <tr>
+            <th class="push-left">Nombre</th>
+            <th>Valor</th>
+            <th class="center">Pagado</th>
+            <th class="center">Acciones</th>
+          </tr>
+        </thead>
+        <tbody>
+
+          <%= for (income) in incomes { %>
+            <tr>
+              <td class="push-left"><%= income.Name %></td>
+              <td><%= income.Value %></td>
+              <td class="center">-</td>
+              <td class="center">
+                <div>
+                  <a href="<%= editIncomePath({ income_id: income.ID }) %>">
+                    <i class="btn btn-info btn-xs fa fa-pencil-square-o" aria-hidden="true"></i>
+                  </a>
+
+                  <a href="<%= incomePath({ income_id: income.ID }) %>" data-method="DELETE" data-confirm="Are you sure?">
+                    <i class="btn btn-danger btn-xs fa fa-trash-o" aria-hidden="true"></i>
+                  </a>
+                </div>
+              </td>
+            </tr>
+          <% } %>
+
+          <tr class="divisor">
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+
+          <%= for (expense) in expenses { %>
+            <tr>
+              <td class="push-left"><%= expense.Name %></td>
+              <td><%= expense.Value %></td>
+              <td class="center"><%= expense.Paid %></td>
+              <td class="center">
+                <div>
+                  <a href="<%= editExpensePath({ expense_id: expense.ID }) %>">
+                    <i class="btn btn-info btn-xs fa fa-pencil-square-o" aria-hidden="true"></i>
+                  </a>
+                  <a href="<%= expensePath({ expense_id: expense.ID }) %>" data-method="DELETE" data-confirm="Are you sure?">
+                    <i class="btn btn-danger btn-xs fa fa-trash-o" aria-hidden="true"></i>
+                  </a>
+                </div>
+              </td>
+            </tr>
+          <% } %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <div class="boards-list d-flex justify-content-between flex-column">
+    <div class="periods">
+      <h5>Recientes</h5>
+      <ul class="">
+        <%= for (board) in boards { %>
+          <li>
+            <a href="<%= boardPath({ board_id: board.ID }) %>"><%= board.Name %></a>
+          </li>
+        <% } %>
+      </ul>
+    </div>
+
+    <!-- data-toggle="modal" data-target="#add-report" -->
+    <a href="<%= newBoardsPath() %>" class="add-report">Nuevo Tablero</a>
+  </div>
 </div>
-
-<ul class="list-unstyled list-inline">
-  <li><a href="<%= boardsPath() %>" class="btn btn-info">Back to all Boards</a></li>
-  <li><a href="<%= editBoardPath({ board_id: board.ID })%>" class="btn btn-warning">Edit</a></li>
-  <li><a href="<%= boardPath({ board_id: board.ID })%>" data-method="DELETE" data-confirm="Are you sure?" class="btn btn-danger">Destroy</a>
-</ul>
-
-<p>
-  <strong>Name</strong>: <%= board.Name %>
-</p>
-
-<table class="table table-striped">
-  <thead>
-    <th>Name</th>
-    <th>Value</th>
-    <th>&nbsp;</th>
-  </thead>
-  <tbody>
-    <%= for (income) in incomes { %>
-      <tr>
-        <td><%= income.Name %></td>
-        <td><%= income.Value %></td>
-        <td>
-          <div class="pull-right">
-            <a href="<%= editIncomePath({ income_id: income.ID }) %>" class="btn btn-warning">Edit</a>
-            <a href="<%= incomePath({ income_id: income.ID }) %>" data-method="DELETE" data-confirm="Are you sure?" class="btn btn-danger">Destroy</a>
-          </div>
-        </td>
-      </tr>
-    <% } %>
-
-    <%= for (expense) in expenses { %>
-      <tr>
-        <td><%= expense.Name %></td>
-        <td><%= expense.Value %></td>
-        <td>
-          <div class="pull-right">
-            <a href="<%= editExpensePath({ expense_id: expense.ID }) %>" class="btn btn-warning">Edit</a>
-            <a href="<%= expensePath({ expense_id: expense.ID }) %>" data-method="DELETE" data-confirm="Are you sure?" class="btn btn-danger">Destroy</a>
-          </div>
-        </td>
-      </tr>
-    <% } %>
-  </tbody>
-</table>
