Create Edit and delete a board

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -4,6 +4,14 @@ html, body, .boards-list {
   font-size: 14px;
 }
 
+*:focus{
+  outline: none;
+  text-decoration: none !important;
+}
+a:focus, a:hover {
+  color: white;
+}
+
 ul, li{
   list-style: none;
   padding: 0;
