--- a/assets/css/buttons.scss
+++ b/assets/css/buttons.scss
@@ -1,5 +1,6 @@
 .btn{
   border: 0;
+  font-size: 14px;
 }
 .btn-success{
   background-color: $green;
@@ -15,8 +16,16 @@
   background: $blue;
 }
 
+.btn-default{
+  background: #f1f1f1;
+}
+
 .btn-xs{
   padding: 8px 9px;
+}
+
+.btn-group-sm>.btn, .btn-sm {
+  padding: .25rem 1rem;
 }
 
 .button-with-tooltip{
