--- a/templates/boards/index.html
+++ b/templates/boards/index.html
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-between border-wrapper">
   <div class="board-values d-flex justify-content-center align-items-center flex-column">
-    <h3 class="mb-2">Hey! Bienvenido a Finanzly</h3>
+    <h3 class="mb-2">Hey, Bienvenido a Finanzly</h3>
     <p class="mb-5">Una App para llevar tus ingresos y gastos mensuales!</p>
     <a href="<%= newBoardsPath() %>" class="btn btn-success btn-lg" data-toggle="modal" data-target="#add-board">Agregar un nuevo Tablero</a>
   </div>
