--- a/templates/auth/new.html
+++ b/templates/auth/new.html
@@ -1,5 +1,5 @@
-<div class="login-wrapper">
-  <h2 class="login-title">Finanzly</h2>
+<div class="login-wrapper d-flex flex-column align-items-center justify-content-between">
+  <h2 class="login-title text-center">Finanzly</h2>
 
   <div class="alert alert-error" role="alert"></div>
 
