--- a/templates/auth/new.html
+++ b/templates/auth/new.html
@@ -1,4 +1,4 @@
-<div class="login-wrapper d-flex flex-column align-items-center justify-content-between">
+<div class="login-wrapper d-flex flex-column align-items-center justify-content-center">
   <h2 class="login-title text-center">Finanzly</h2>
 
   <div class="alert alert-error" role="alert"></div>
